--- a/.github/workflows/rust-publish.yaml
+++ b/.github/workflows/rust-publish.yaml
@@ -3,10 +3,10 @@ name: rust-publish
 # thanks to:
 # https://github.com/msusdev/end-to-end-github-actions/blob/main/presentations/ci_github_actions.md
 # https://www.youtube.com/watch?v=cvvOqNorlZQ
+# https://github.com/actions/upload-release-asset
 # other
 # https://github.com/marketplace/actions/create-release
 # https://github.com/marvinpinto/action-automatic-releases
-# https://alexene.dev/2019/09/04/Github-actions-CI-rust-SDL2.html
 
 on:
   push:
@@ -17,8 +17,8 @@ permissions:
   contents: write
 
 jobs:
-  build-project:
-    name: Build project
+  build-windows:
+    name: Build windows
     runs-on: windows-latest
     steps:
       - name: Checkout code
@@ -28,17 +28,32 @@ jobs:
       - name: Upload artifact release
         uses: actions/upload-artifact@v2
         with:
-          name: artifact-release
-          path: ./target/release/space_invaders_arcade_emulator.exe
+          name: artifact-windows
+          path: |
+            ./target/release/space_invaders_arcade_emulator.exe
+            ./msvc/dll/64/SDL2.dll
+  build-ubuntu:
+    name: Build ubuntu
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Compile code
+        run: cargo build --release
+      - name: Upload artifact release
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifact-linux
+          path: ./target/release/space_invaders_arcade_emulator
   release-project:
     name: Release project
     runs-on: ubuntu-latest
-    needs: build-project
+    needs: [ build-windows, build-ubuntu ]
     steps:
-      - name: Download artifact content
+      - name: Download windows artifact content
         uses: actions/download-artifact@v2
         with:
-          name: artifact-release
+          name: artifact-windows
       - name: View content
         run: ls -R
       - name: Create GitHub release
@@ -49,7 +64,7 @@ jobs:
         with:
           tag_name: ${{ github.run_number }}
           release_name: Release ${{ github.run_number }}
-      - name: Archive release
+      - name: Archive windows release
         uses: thedoctor0/zip-release@master
         with:
           filename: release-windows.zip
@@ -60,5 +75,24 @@ jobs:
         with:
           upload_url: ${{ steps.create-new-release.outputs.upload_url }}
           asset_path: release-windows.zip
-          asset_name: space_invaders_arcade_emulator-v${{ github.run_number }}.zip
+          asset_name: space_invaders_arcade_emulator-windows-v${{ github.run_number }}.zip
+          asset_content_type: application/zip
+      - name: Download ubuntu artifact content
+        uses: actions/download-artifact@v2
+        with:
+          name: artifact-ubuntu
+      - name: View content
+        run: ls -R
+      - name: Archive ubuntu release
+        uses: thedoctor0/zip-release@master
+        with:
+          filename: release-windows.zip
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+          asset_path: release-windows.zip
+          asset_name: space_invaders_arcade_emulator-linux-v${{ github.run_number }}.zip
           asset_content_type: application/zip
