--- a/.github/workflows/rust-publish.yaml
+++ b/.github/workflows/rust-publish.yaml
@@ -38,6 +38,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Download libraries
+        run: sudo apt-get install libsdl2-dev
       - name: Compile code
         run: cargo build --release
       - name: Upload artifact release
