--- a/.github/workflows/rust-publish.yaml
+++ b/.github/workflows/rust-publish.yaml
@@ -25,13 +25,17 @@ jobs:
         uses: actions/checkout@v2
       - name: Compile code
         run: cargo build --release
+      - name: Copy exe to root
+        run: cp ./target/release/space_invaders_arcade_emulator.exe .
+      - name: Copy dll to root
+        run: cp ./msvc/dll/64/SDL2.dll .
       - name: Upload artifact release
         uses: actions/upload-artifact@v2
         with:
           name: artifact-windows
           path: |
-            ./target/release/space_invaders_arcade_emulator.exe
-            ./msvc/dll/64/SDL2.dll
+            ./space_invaders_arcade_emulator.exe
+            ./SDL2.dll
   build-ubuntu:
     name: Build ubuntu
     runs-on: ubuntu-latest
@@ -45,7 +49,7 @@ jobs:
       - name: Upload artifact release
         uses: actions/upload-artifact@v2
         with:
-          name: artifact-linux
+          name: artifact-ubuntu
           path: ./target/release/space_invaders_arcade_emulator
   release-project:
     name: Release project
