--- a/.github/workflows/rust-publish.yaml
+++ b/.github/workflows/rust-publish.yaml
@@ -99,6 +99,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create-new-release.outputs.upload_url }}
-          asset_path: release-windows.zip
+          asset_path: release-linux.zip
           asset_name: space_invaders_arcade_emulator-linux-v${{ github.run_number }}.zip
           asset_content_type: application/zip
