--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,14 +10,32 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-
+  build-ubuntu:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Download libraries
         run: sudo apt-get install libsdl2-dev
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build
+        run: cargo build --verbose
+      - name: Run tests
+        run: cargo test --verbose
+  build-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download libraries
+        run: brew install sdl2
+      - name: Add lib to path
+        run: export LIBRARY_PATH="$LIBRARY_PATH:/opt/local/lib/"
       - name: Build
         run: cargo build --verbose
       - name: Run tests
