--- a/.github/workflows/rust-publish.yaml
+++ b/.github/workflows/rust-publish.yaml
@@ -36,6 +36,7 @@ jobs:
           path: |
             ./space_invaders_arcade_emulator.exe
             ./SDL2.dll
+            ./game_roms
   build-ubuntu:
     name: Build ubuntu
     runs-on: ubuntu-latest
@@ -50,7 +51,28 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact-ubuntu
-          path: ./target/release/space_invaders_arcade_emulator
+          path: |
+            ./target/release/space_invaders_arcade_emulator
+            ./game_roms
+  build-macos:
+    name: Build macos
+    runs-on: macos-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Download libraries
+        run: brew install sdl2
+      - name: Add lib to path
+        run: export LIBRARY_PATH="$LIBRARY_PATH:/opt/local/lib/"
+      - name: Compile code
+        run: cargo build --release
+      - name: Upload artifact release
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifact-macos
+          path: |
+            ./target/release/space_invaders_arcade_emulator
+            ./game_roms
   release-project:
     name: Release project
     runs-on: ubuntu-latest
@@ -83,6 +105,11 @@ jobs:
           asset_path: release-windows.zip
           asset_name: space_invaders_arcade_emulator-windows-v${{ github.run_number }}.zip
           asset_content_type: application/zip
+      - name: Delete windows release files
+        uses: |
+          rm space_invaders_arcade_emulator.exe
+          rm release-windows.zip
+          rm SDL2.dll
       - name: Download ubuntu artifact content
         uses: actions/download-artifact@v2
         with:
@@ -92,7 +119,7 @@ jobs:
       - name: Archive ubuntu release
         uses: thedoctor0/zip-release@master
         with:
-          filename: release-windows.zip
+          filename: release-linux.zip
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
         env:
@@ -101,4 +128,26 @@ jobs:
           upload_url: ${{ steps.create-new-release.outputs.upload_url }}
           asset_path: release-linux.zip
           asset_name: space_invaders_arcade_emulator-linux-v${{ github.run_number }}.zip
+          asset_content_type: application/zip
+      - name: Delete ubuntu release files
+        uses: |
+          rm space_invaders_arcade_emulator
+      - name: Download macos artifact content
+        uses: actions/download-artifact@v2
+        with:
+          name: artifact-macos
+      - name: View content
+        run: ls -R
+      - name: Archive macos release
+        uses: thedoctor0/zip-release@master
+        with:
+          filename: release-macos.zip
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create-new-release.outputs.upload_url }}
+          asset_path: release-macos.zip
+          asset_name: space_invaders_arcade_emulator-macos-v${{ github.run_number }}.zip
           asset_content_type: application/zip
