--- a/.github/workflows/rust-publish.yaml
+++ b/.github/workflows/rust-publish.yaml
@@ -74,7 +74,7 @@ jobs:
   release-project:
     name: Release project
     runs-on: ubuntu-latest
-    needs: [ build-windows, build-ubuntu ]
+    needs: [ build-windows, build-ubuntu, build-macos ]
     steps:
       - name: Download windows artifact content
         uses: actions/download-artifact@v2
