test sdl2 mixer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-sdl2 = "0.35"
+#[dependencies]
+#sdl2 = "0.35"
+[dependencies.sdl2]
+version = "0.35"
+default-features = false
+features = ["mixer"]
