--- a/.github/workflows/rust-publish.yaml
+++ b/.github/workflows/rust-publish.yaml
@@ -27,8 +27,8 @@ jobs:
           path: |
             ./space_invaders_arcade_emulator.exe
             ./SDL2.dll
+            ./SDL2_mixer.dll
             ./game_roms
-            ./game_audios
   build-ubuntu:
     name: Build ubuntu
     runs-on: ubuntu-latest
@@ -48,7 +48,6 @@ jobs:
           path: |
             ./space_invaders_arcade_emulator
             ./game_roms
-            ./game_audios
   build-macos:
     name: Build macos
     runs-on: macos-latest
@@ -70,7 +69,6 @@ jobs:
           path: |
             ./space_invaders_arcade_emulator
             ./game_roms
-            ./game_audios
   release-project:
     name: Release project
     runs-on: ubuntu-latest
