--- a/.github/workflows/rust-publish.yaml
+++ b/.github/workflows/rust-publish.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Download libraries
-        run: sudo apt-get install libsdl2-dev
+        run: sudo apt-get install libsdl2-dev libsdl2-mixer-dev
       - name: Compile code
         run: cargo build --release
       - name: Copy exe to root
