--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Download libraries
-        run: sudo apt-get install libsdl2-dev
+        run: sudo apt-get install libsdl2-dev libsdl2-mixer-dev
       - name: Build
         run: cargo build --verbose
       - name: Run tests
