Updated macOs build

--- a/.github/workflows/rust-publish.yaml
+++ b/.github/workflows/rust-publish.yaml
@@ -55,7 +55,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Download libraries
-        run: brew install sdl2
+        run: |
+          brew install sdl2
+          brew install sdl2_mixer
       - name: Add lib to path
         run: export LIBRARY_PATH="$LIBRARY_PATH:/opt/local/lib/"
       - name: Compile code
